# protein-complex-converter

./: 9606_ComplexPortal.mitab  pyproject.toml
protein_complex_converter/: parser.py
tests/: test_parsing.py
tests/data/: 9606_ComplexPortal.txt  9606_ComplexPortal_5lines.txt
